1 现在项目可以新建了，图片上传和文件上传成功。
尚未完成
1 data的init相关未修改完成
2 展示项目列表尚未完成。

--- a/tpl/index/mainheader.htm
+++ b/tpl/index/mainheader.htm
@@ -83,10 +83,10 @@
                         </li>
                         -->
                         <li>
-                            <a href="?project/index"><i class="fa fa-dashboard fa-fw"></i> 项目管理</a>
+                            <a href="?project/index"><i class="fa fa-dashboard fa-fw"></i> 任务管理</a>
                         </li>
-                        <li>
-                            <a href="?task/index"><i class="fa fa-table fa-fw"></i> 任务管理</a>
+                         <!--<li> -->
+                            <!--<a href="?task/index"><i class="fa fa-table fa-fw"></i> 任务管理</a>-->
                             <!--
                             <ul class="nav nav-second-level collapse">
                                 <li>
@@ -98,7 +98,7 @@
                             </ul>
                             -->
                             <!-- /.nav-second-level -->
-                        </li>
+                         <!--</li> -->
                         <!-- <li>
                             <a href="?duty/index"><i class="fa fa-edit fa-fw"></i> 排班</a>
                         </li> -->
@@ -115,7 +115,7 @@
                             <!-- /.nav-second-level -->
                         <!--</li>-->
 
-                        <li>
+                         <!--<li>
                             <a href="#"><i class="fa  fa-sitemap fa-fw"></i> 后台人员管理<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level collapse">
                                 <li>
@@ -124,10 +124,10 @@
                                 <li>
                                     <a href="###">后台人员组管理</a>
                                 </li>
-                            </ul>
+                            </ul>-->
                             <!-- /.nav-second-level -->
-                        </li>
-                        <li>
+                        <!--</li>-->
+                        <!--<li>
                             <a href="#"><i class="fa  fa-sitemap fa-fw"></i> 客户管理<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level collapse">
                                 <li>
@@ -137,8 +137,7 @@
                                     <a href="###">客户组管理</a>
                                 </li>
                             </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
+                        </li> -->
 
                         <li>
                             <a href="#"><i class="fa fa-fw fa-wrench "></i> 系统设置<span class="fa arrow"></span></a>
