--- a/tpl/project/index.htm
+++ b/tpl/project/index.htm
@@ -1,6 +1,6 @@
-<div id="!page-wrapper">
+<div id="page-wrapper">
     <div class="clear">
-        
+        <a href='?project/new'><button class='btn btn-default'>新建项目</button></a>
     </div>
 </div>
 
