--- a/tpl/index/mainheader.htm
+++ b/tpl/index/mainheader.htm
@@ -21,6 +21,7 @@
         <script src="[:vendor]/metisMenu/metisMenu.min.js"></script>
         <script src="[:vendor]/sb-admin/sb-admin-2.min.js"></script>
         <script src="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.js"></script>
+        <script src="[:vendor]/distpicker/distpicker.js"></script>
         
         <script src="[:app]/js/main.js"></script>
         <script src="[:app]/js/picservice.js"></script>
