--- a/tpl/project/index.htm
+++ b/tpl/project/index.htm
@@ -15,7 +15,7 @@
             $limit_time = $project->limit_time();
             $status = $project->status();
         ?>
-            <div class='project_elf'>
+            <div class='project_elf' muffinid='{:$muffinid}'>
                 <div class='project_info'>
                     <div class='cover_thumbnail'><img src='{:$cover_thumbnail_url}'></div>
                     <div class='project_info_right'>
@@ -25,6 +25,7 @@
                         <div class='type'>时限：{:$limit_time}</div>
                         <div class='type'>状态：{:$status}</div>
                         <a href='?task/index&muffinid={:$muffinid}'><div class='btn btn-default'>查看项目任务</div></a>
+                        <div class='btn btn-danger del_btn' data-toggle="modal" data-target="#myModal" >删除项目</div>
                     </div>
                 </div>
                 <div class='description'>摘要：{:$description}</div>
@@ -36,3 +37,23 @@
     </div>
 </div>
 
+
+<!-- Modal     data-toggle="modal" data-target="#myModal"   -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">提示！</h4>
+      </div>
+      <div class="modal-body">
+        确认是要删除此项目吗？
+        （项目中的任务也一并会删除！）
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-danger do_del">确认删除</button>
+      </div>
+    </div>
+  </div>
+</div>
