--- a/tpl/admin/header.htm
+++ b/tpl/admin/header.htm
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="?"> 预约系统 </a>
+                <a class="navbar-brand" href="?"> 亚安信任务派发系统 </a>
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
                     <?php echo get_session("username", ""); ?>
@@ -83,79 +83,10 @@
                         </div>
                         </li>
                         -->
-                        <li>
-                            <a href="?project/index"><i class="fa fa-dashboard fa-fw"></i> 任务管理</a>
-                        </li>
-                         <!--<li> -->
-                            <!--<a href="?task/index"><i class="fa fa-table fa-fw"></i> 任务管理</a>-->
-                            <!--
-                            <ul class="nav nav-second-level collapse">
-                                <li>
-                                    <a href="?servers/index">技师列表</a>
-                                </li>
-                                <li>
-                                    <a href="?servers/new">新增技师</a>
-                                </li>
-                            </ul>
-                            -->
-                            <!-- /.nav-second-level -->
-                         <!--</li> -->
-                        <!-- <li>
-                            <a href="?duty/index"><i class="fa fa-edit fa-fw"></i> 排班</a>
-                        </li> -->
-                        <!--<li>-->
-                            <!--<a href="?orders/index"><i class="fa fa-bar-chart-o fa-fw"></i> 订单管理<span class=""></span></a>-->
-                            <!--<ul class="nav nav-second-level collapse">
-                                <li>
-                                    <a href="?orders/index">订单列表</a>
-                                </li>
-                                <li>
-                                    <a href="?orders/new">新增订单</a>
-                                </li>
-                            </ul>-->
-                            <!-- /.nav-second-level -->
-                        <!--</li>-->
-
-                         <!--<li>
-                            <a href="#"><i class="fa  fa-sitemap fa-fw"></i> 后台人员管理<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level collapse">
-                                <li>
-                                    <a href="?customers/index">后台人员管理</a>
-                                </li>
-                                <li>
-                                    <a href="###">后台人员组管理</a>
-                                </li>
-                            </ul>-->
-                            <!-- /.nav-second-level -->
-                        <!--</li>-->
-                        <!--<li>
-                            <a href="#"><i class="fa  fa-sitemap fa-fw"></i> 客户管理<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level collapse">
-                                <li>
-                                    <a href="?customers/index">客户管理</a>
-                                </li>
-                                <li>
-                                    <a href="###">客户组管理</a>
-                                </li>
-                            </ul>
-                        </li> -->
-
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-wrench "></i> 系统设置<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level collapse">
-                                    <li>
-                                    <a href="?system/project_types">项目分类</a>
-                                    </li>
-                                    <!--<li>
-                                    <a href="?system/work_hours_setting">任务状态</a>
-                                    </li>-->
-                                    <!--<li>
-                                    <a href="?system/personal_config">个人设置</a>
-                                    </li>-->
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                    
+                        <li><a href="?admin/project/index"><i class="fa fa-dashboard fa-fw"></i> 任务管理</a></li>
+                        <li><a href="?admin/project/index"><i class="fa fa-dashboard fa-fw"></i> 调查结果</a></li>
+                        <li><a href="?admin/project/index"><i class="fa fa-dashboard fa-fw"></i> 调查员信息</a></li>
+                        <li><a href="?admin/system/project_type"><i class="fa fa-fw fa-wrench "></i> 系统设置</span></a></li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
