--- a/tpl/admin/login/login.htm
+++ b/tpl/admin/login/login.htm
@@ -14,8 +14,8 @@
         <i class="user-icon fa fa-key"></i>
     </div>
     <div class="login-field">
-        <!--<a class="pull-left" href="?login/register">账号注册</a>-->
-        <a class="pull-right" href="?login/forget">忘记密码?</a>
+        <!-- <a class="pull-left" href="?login/register">账号注册</a> -->
+        <!-- <a class="pull-right" href="?login/forget">忘记密码?</a> -->
     </div>
     <div class="login-field">
         <button class="btn btn-primary" id="do-login">登录</button>
