--- a/tpl/admin/task/index.htm
+++ b/tpl/admin/task/index.htm
@@ -1,6 +1,6 @@
 <div id="page-wrapper">
     <div class="clear">
-    <h3>任务列表 <a href='?task/new&muffinid={:$muffinid}'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a></h3>
+    <h3>任务列表 <a href='?admin/task/new&muffinid={:$muffinid}'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a></h3>
     <hr>
     <?php
     //var_dump($tasks);
@@ -12,7 +12,6 @@
             $address = $task->address();
             $content = $task->content();
             $location = $task->location();
-            
             $location = json_decode($location);
             $provice = $location->provice->title;
             $city = $location->city->title;
