调整 ?wechat/index/home 的UI（用 flex 布局）

--- a/tpl/wechat/header.htm
+++ b/tpl/wechat/header.htm
@@ -12,17 +12,21 @@
         <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.css">
         <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.theme.min.css">
         <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.structure.min.css">
-        
+        <link rel="stylesheet" href="[:vendor]/bootstrap-select/bootstrap-select.min.css">
+
         <link rel="stylesheet" href="[:app]/css/main.css">
         <link rel="stylesheet" href="[:app]/css/modify-on-click.css">
+        <link rel="stylesheet" href="[:app]/css/checkbox.css">
+        <link rel="stylesheet" href="[:app]/css/custom_wx.css">
 
         <script src="[:vendor]/jquery/jquery-2.1.1.min.js"></script>
         <script src="[:vendor]/bootstrap/js/bootstrap.min.js"></script>
         <script src="[:vendor]/metisMenu/metisMenu.min.js"></script>
         <!--<script src="[:vendor]/sb-admin/sb-admin-2.min.js"></script>-->
         <script src="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.js"></script>
-        <script src="[:vendor]/distpicker/distpicker.js"></script>
-        
+        <script src="[:vendor]/bootstrap-select/bootstrap-select.min.js"></script>
+        <script src="[:vendor]/distpicker/distpickerXbootstrap-select.min.js"></script>
+
         <script src="[:app]/js/main.js"></script>
         <script src="[:app]/js/picservice.js"></script>
         <script src="[:app]/js/calendar.js"></script>
