1 project/index page hided status and offered the file download link. 2 project/new page can upload file with the suffix '.xlsm'. 3 project/new page will check uploadfile's suffix before uploading by js.

--- a/tpl/admin/project/new.htm
+++ b/tpl/admin/project/new.htm
@@ -12,7 +12,7 @@
         <form>
           <div class="form-group">
             <label for="project_id">请输入项目编号</label>
-            <input type="text" class="form-control" id="project_id" placeholder="项目编号">
+            <input type="number" class="form-control" id="project_id" placeholder="项目编号">
           </div>
           <div class="form-group">
             <label for="title">请输入项目名称</label>
@@ -57,7 +57,7 @@
           <div class="form-group">
             <label for="uploadpaperfile">请上传问卷文件</label>
             <input type="file" id="uploadpaperfile">
-            <p class="help-block">请上传问卷文件</p>
+            <p class="help-block">后缀类型: .xls .xlsm .xlsx .doc .docx</p>
           </div>
           <div type="submit" class="btn btn-primary do_new">新建</div>
         </form>
