--- a/tpl/admin/project/index.htm
+++ b/tpl/admin/project/index.htm
@@ -14,6 +14,7 @@
             $cover_thumbnail_url = $project->cover_thumbnail_url();
             $limit_time = $project->limit_time();
             $status = $project->status();
+            $paperfile_url = $project->paperfile_url();
         ?>
             <div class='project_elf' muffinid='{:$muffinid}'>
                 <div class='project_info'>
@@ -23,7 +24,8 @@
                         <div class='title'>名称：{:$title}</div>
                         <div class='type'>类别：{:$type}</div>
                         <div class='type'>时限：{:$limit_time}</div>
-                        <div class='type'>状态：{:$status}</div>
+                        <!--<div class='type'>状态：{:$status}</div>-->
+                        <div class='type'><a href='{:$paperfile_url}'>下载文件</a></div>
                         <a href='?admin/task/index&muffinid={:$muffinid}'><div class='btn btn-default'>查看项目任务</div></a>
                         <div class='btn btn-danger del_btn' data-toggle="modal" data-target="#myModal" >删除项目</div>
                     </div>
