--- a/tpl/admin/project/new.htm
+++ b/tpl/admin/project/new.htm
@@ -1,30 +1,38 @@
 <div id="page-wrapper">
     <div class="clear">
       <?php
-        //var_dump($project_types);
+        //var_dump($project);
+        //var_dump($muffinid);
+        if ($project->is_valid()) {
+            $limit_time = json_encode($project->limit_time());
+            ?><script type="text/javascript"> var limit_time = {:$limit_time};</script><?php
+        } else {
+            ?><script type="text/javascript"> var limit_time = null;</script><?php
+        }
       ?>
       <!--<ol class="breadcrumb">
         <li><a href="?">首页</a></li>
         <li><a href="?project/index">任务管理</a></li>
         <li class="active">新建项目</li>
       </ol>-->
-      <h3>新建项目</h3><hr>
+      <h3>
+        <?php echo $project->is_valid() ? 编辑项目 : 新建项目; ?>
+      </h3><hr>
         <form>
           <div class="form-group">
             <label for="project_id">请输入项目编号</label>
-            <input type="number" class="form-control" id="project_id" placeholder="项目编号">
+            <input type="number" class="form-control" id="project_id" placeholder="项目编号"
+            value ='<?php echo $project->is_valid() ? $project->project_id() : null; ?>'>
           </div>
           <div class="form-group">
             <label for="title">请输入项目名称</label>
-            <input type="text" class="form-control" id="title" placeholder="项目名称">
+            <input type="text" class="form-control" id="title" placeholder="项目名称"
+            value ='<?php echo $project->is_valid() ? $project->title() : null; ?>'>
           </div>
           <div class="form-group">
             <label for="dropdownMenu1">请选择项目类型</label>
             <div class="dropdown">
-              <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                项目类型
-                <span class="caret"></span>
-              </button>
+              <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><?php echo $project->is_valid() ? $project->type() : "项目类型<span class='caret'></span>"; ?></button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
               <?php
                 foreach ($project_types as $type) {
@@ -38,17 +46,28 @@
           </div>
           <div class="form-group">
             <label for="description">请输入摘要</label>
-            <textarea class="form-control"  id="description"  rows="3"></textarea>
+            <textarea class="form-control"  id="description"  rows="3"><?php echo $project->is_valid() ? $project->description() : null; ?></textarea>
           </div>
           <div class="form-group">
             <label for="text">请输入正文</label>
-            <textarea class="form-control" id="text" rows="6"></textarea>
+            <textarea class="form-control" id="text" rows="6"><?php echo $project->is_valid() ? $project->text() : null; ?></textarea>
           </div>
           <div class="form-group">
             <label for="cover">请上传封面</label><br>
-            <div class='btn btn-default upload_cover_btn'>点击上传</div>
-            <input type='file' class='hide' id='uploadcover'>
-            <img class='hide' id='cover_show'>
+            <?php
+            if ($project->is_valid()) {
+                ?>
+                <input type='file' class='hide' id='uploadcover'>
+                <img class='' id='cover_show' src='{:$project->cover_url()}'>
+                <?php
+            }else {
+                ?>
+                <div class='btn btn-default upload_cover_btn'>点击上传</div>
+                <input type='file' class='hide' id='uploadcover'>
+                <img class='hide' id='cover_show'>
+                <?php
+            }
+            ?>
           </div>
           <div class="form-group">
             <label for="limit_time">请选取完结时间</label>
@@ -59,8 +78,16 @@
             <input type="file" id="uploadpaperfile">
             <p class="help-block">后缀类型: .xls .xlsm .xlsx .doc .docx</p>
           </div>
-          <div type="submit" class="btn btn-primary do_new">新建</div>
+          <?php
+            if($project->is_valid()){
+            ?><div type="submit" class="btn btn-primary do_modify" muffinid='{:$muffinid}'>修改</div><?php
+            }else {
+            ?><div type="submit" class="btn btn-primary do_new">新建</div><?php
+            }
+          ?>
+          
         </form>
     </div>
 </div>
-  
+
+<input class='hide' id='paperfile_url' value='<?php echo $project->is_valid() ? $project->paperfile_url() : null; ?>'>
