--- a/tpl/admin/header.htm
+++ b/tpl/admin/header.htm
@@ -84,8 +84,8 @@
                         </li>
                         -->
                         <li><a href="?admin/project/index"><i class="fa fa-dashboard fa-fw"></i> 任务管理</a></li>
-                        <li><a href="?admin/project/index"><i class="fa fa-dashboard fa-fw"></i> 调查结果</a></li>
-                        <li><a href="?admin/project/index"><i class="fa fa-dashboard fa-fw"></i> 调查员信息</a></li>
+                        <li><a href="?admin/task/index"><i class="fa fa-dashboard fa-fw"></i> 调查结果</a></li>
+                        <li><a href="?admin/customers/index"><i class="fa fa-dashboard fa-fw"></i> 调查员信息</a></li>
                         <li><a href="?admin/system/project_types"><i class="fa fa-fw fa-wrench "></i> 系统设置</span></a></li>
                     </ul>
                 </div>
