--- a/tpl/wechat/index/home.htm
+++ b/tpl/wechat/index/home.htm
@@ -1,7 +1,7 @@
 <div class="wx_view">
     <div class="wx_col_item">
         <div class="wx_row_item">
-            <img src="[:app]//images/default_headimg.jpg" class="img-responsive img-circle wx_headimg">
+            <img src="{=$user["face"]}" class="img-responsive img-circle wx_headimg">
         </div>
         <div class="wx_row_item">
             <p>昵称</p>
