--- a/tpl/wechat/header.htm
+++ b/tpl/wechat/header.htm
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="[:app]/css/modify-on-click.css">
         <link rel="stylesheet" href="[:app]/css/checkbox.css">
         <link rel="stylesheet" href="[:app]/css/custom_wx.css">
+        <link rel="stylesheet" href="[:app]/css/weui.css">
 
         <script src="[:vendor]/jquery/jquery-2.1.1.min.js"></script>
         <script src="[:vendor]/bootstrap/js/bootstrap.min.js"></script>
