update wechat home..
Change-Id: I6dc47d596977db897da300881f1035daac583413

--- a/tpl/wechat/header.htm
+++ b/tpl/wechat/header.htm
@@ -27,6 +27,7 @@
         <script src="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <script src="[:vendor]/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="[:vendor]/distpicker/distpickerXbootstrap-select.min.js"></script>
+        <script src="[:vendor]/vue/vue.js"></script>
 
         <script src="[:app]/js/main.js"></script>
         <script src="[:app]/js/picservice.js"></script>
