--- a/tpl/wechat/index/sheet.htm
+++ b/tpl/wechat/index/sheet.htm
@@ -2,10 +2,10 @@
 <script type="text/javascript">
     wx.config({
         debug: true,
-        appId: '{:$signPackage["appId"]}',
-        timestamp: {:php echo $signPackage["timestamp"]},
-        nonceStr: '{:php echo $signPackage["nonceStr"]}',
-        signature: '{:php echo $signPackage["signature"]}',
+        appId: '{:$signPackage["appid"]}',
+        timestamp: {:$signPackage["timestamp"]},
+        nonceStr: '{:$signPackage["noncestr"]}',
+        signature: '{:$signPackage["signature"]}',
         jsApiList : [ 'checkJsApi', 'onMenuShareTimeline',
                 'onMenuShareAppMessage', 'onMenuShareQQ',
                 'onMenuShareWeibo', 'hideMenuItems',
@@ -21,9 +21,6 @@
                 'openProductSpecificView', 'addCard', 'chooseCard',
                 'openCard' ]
     });
-    window.onload = function() {
-        getSignPackage();
-    }
 </script>
 
 <!-- 主体页面 -->
