--- a/tpl/admin/project/index.htm
+++ b/tpl/admin/project/index.htm
@@ -1,6 +1,6 @@
 <div id="page-wrapper">
     <div class="clear">
-    <h3>项目列表 <a href='?admin/project/new'><button class='btn btn-success' style='display:inline-block; float: right;'>新建项目</button></a></h3>
+    <h3>项目列表 <a href='?admin/task/new'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a><a href='?admin/project/new'><button class='btn btn-success' style='display:inline-block; float: right; margin-right: 15px;'>新建项目</button></a></h3>
     <hr>
     <?php
     //var_dump($all_projects);
