--- a/tpl/admin/task/index.htm
+++ b/tpl/admin/task/index.htm
@@ -1,6 +1,8 @@
 <div id="page-wrapper">
     <div class="clear">
-    <h3>任务列表 <a href='?admin/task/new&muffinid={:$muffinid}'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a></h3>
+    <h3>任务列表 -- 项目名称：{:$project_title}
+    <!--<a href='?admin/task/new&muffinid={:$muffinid}'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a>-->
+    </h3>
     <hr>
     <?php
     //var_dump($tasks);
@@ -23,13 +25,14 @@
             <div class='task_elf' muffinid='{:$muffinid}'>
                 <div class='task_info'>
                     <div class='task_info_right'>
-                        <div class='title'>名称：{:$title}</div>
-                        <div class='location'>地址：{:$location_show}</div>
-                        <div class='address'>详细地址：{:$status}</div>
-                        <div class='content'>联系人信息/备注:{:$content}</div>
-                        <div class='content'>状态:{:$status_show}</div>
+                        <div class='title'>任务名称：{:$title}</div>
+                        <div class='location'>所属地址：{:$location_show}</div>
+                        <div class='address'>详细地址：{:$address}</div>
+                        <div class='content'>信息备注：{:$content}</div>
+                        <div class='content'>当前状态：{:$status_show}</div>
                         <div class='btn btn-default'>审核任务</div>
                         <div class='btn btn-default'>分派任务</div>
+                        <a href='?admin/task/new&taskid={:$muffinid}'><div class='btn btn-primary'>编辑任务</div></a>
                         <div class='btn btn-danger del_btn'  data-toggle="modal" data-target="#myModal">删除任务</div>
                     </div>
                 </div>
