--- a/tpl/wechat/index/home.htm
+++ b/tpl/wechat/index/home.htm
@@ -21,6 +21,38 @@
             <button id="viewtask" class="weui_btn weui_btn_primary">查看任务</button>
         </div>
     </div>
-    <div class="pull-left user-info">
+    <div id="taskinfos">
+        <div id="tasks" class="clear flex-wrap flex-row" v-if="showtasklist">
+            <div class="task flex-item flex-wrap flex-col" v-for="(task, taskkey) in tasks" v-bind:taskkey="taskkey" v-on:click="viewTask">
+                <div class="flex-item task-cover"><img v-bind:src="task.cover"></img></div>
+                <div class="flex-item flex-wrap flex-row flex-space-between">
+                    <div class="flex-item task-title">{{task.project_title}}</div>
+                    <div class="flex-item task-type">{{task.type}}</div>
+                </div>
+                <div class="flex-item task-projectid">编号：{{task.projectid}}</div>
+                <div class="flex-item task-address">地址：{{task.address}}</div>
+                <div class="flex-item task-deadline">期限：{{task.deadline}}</div>
+            </div>
+        </div>
+        <div id="task-info" class="clear" v-if="showtaskinfo">
+            <div class="task flex-item flex-wrap flex-col">
+                <div class="flex-item task-cover"><img v-bind:src="tasks[viewtaskkey].cover"></img></div>
+                <div class="flex-item flex-wrap flex-row flex-space-between">
+                    <div class="flex-item task-title">{{tasks[viewtaskkey].project_title}}</div>
+                    <div class="flex-item task-type">{{tasks[viewtaskkey].type}}</div>
+                </div>
+                <div class="flex-item task-projectid">编号：{{tasks[viewtaskkey].projectid}}</div>
+                <div class="flex-item task-address">地址：{{tasks[viewtaskkey].address}}</div>
+                <div class="flex-item task-content">描述：{{tasks[viewtaskkey].content}}</div>
+                <div class="flex-item task-text">详情：{{tasks[viewtaskkey].text}}</div>
+                <div class="flex-item task-deadline">期限：{{tasks[viewtaskkey].deadline}}</div>
+                <div class="flex-item flex-wrap flex-row flex-space-around">
+                    <div class="flex-item task-word" v-if="tasks[viewtaskkey].accepted"><a class="weui_btn weui_btn_inline weui_btn_primary" v-bind:href="tasks[viewtaskkey].word">问卷下载</a></div>
+                    <div class="flex-item task-word" v-if="tasks[viewtaskkey].accepted"><a class="weui_btn weui_btn_inline weui_btn_primary" href="?wechat/index/sheet">提交任务</a></div>
+                </div>
+                <button class="flex-item weui_btn weui_btn_inline weui_btn_primary" v-on:click="accept" v-if="tasks[viewtaskkey].acceptable">接受任务</button>
+            </div>
+        </div>
     </div>
 </div>
+
