--- a/tpl/wechat/index/home.htm
+++ b/tpl/wechat/index/home.htm
@@ -1,6 +1,7 @@
 <!-- FIXME: 这里先这样写，获取全部接口。以后考再虑是否要每次都获取全部的接口功能，把这段代码移动到header.htm中 -->
-<script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+<script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript">
+if (typeof(wx) != 'undefined') {
     wx.config({
         debug: true, // 如果不需要获取 ticket 成功的 alert 就改成 false
         appId: '{:$signPackage["appid"]}',
@@ -22,6 +23,7 @@
                 'openProductSpecificView', 'addCard', 'chooseCard',
                 'openCard' ]
     });
+}
 </script>
 
 <div class="wx_view">
@@ -33,26 +35,15 @@
             <p>{:$user["nickname"]}</p>
         </div>
         <div class="wx_row_item">
-            <div data-toggle="distpicker">
-                <div class="wx_row_item" style="flex-wrap: wrap;">
-                    <div data-toggle="distpicker" id='distpicker'  data-value-type="code">
-                        <select id='province' class="selectpicker" data-province=""></select>
-                        <select id='city' class="selectpicker" data-city=""></select>
-                        <select id='district' class="selectpicker" data-district=""></select>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wx_row_item">
-            <button id="viewtask" class="weui_btn weui_btn_primary">查看任务</button>
+            <div>当前位置：<span id="current-location">xxxxx</span></div>
         </div>
     </div>
     <div id="taskinfos">
-        <div class="tasks" class="clear flex-wrap flex-col" v-if="showmytasks">
-            <div class="flex-item">已接受任务</div>
+        <div class="tasks" class="clear flex-wrap flex-col" v-if="showtasklist">
+            <div class="flex-item">已接受任务：</div>
             <div class="flex-item flex-wrap flex-row">
-                <div class="task flex-item flex-wrap flex-col" v-for="(task, taskkey) in mytasks" v-bind:taskkey="taskkey" v-on:click="viewTask">
-                    <div class="flex-item task-cover"><img v-bind:src="task.cover"></img></div>
+                <div class="task flex-item flex-wrap flex-col" v-for="(task, taskkey) in tasks" v-bind:taskkey="taskkey" v-on:click="viewTask" v-if="task.accepted">
+                    <div class="flex-item task-cover"><img v-bind:src="task.cover" /></div>
                     <div class="flex-item flex-wrap flex-row flex-space-between">
                         <div class="flex-item task-title">{{task.project_title}}</div>
                         <div class="flex-item task-type">{{task.type}}</div>
@@ -65,10 +56,10 @@
         </div>
 
         <div class="tasks" class="clear flex-wrap flex-col" v-if="showtasklist">
-            <div class="flex-item">本区域任务</div>
+            <div class="flex-item">本区域任务：</div>
             <div class="flex-item flex-wrap flex-row">
-                <div class="task flex-item flex-wrap flex-col" v-for="(task, taskkey) in tasks" v-bind:taskkey="taskkey" v-on:click="viewTask">
-                    <div class="flex-item task-cover"><img v-bind:src="task.cover"></img></div>
+                <div class="task flex-item flex-wrap flex-col" v-for="(task, taskkey) in tasks" v-bind:taskkey="taskkey" v-on:click="viewTask" v-if="!task.accepted">
+                    <div class="flex-item task-cover"><img v-bind:src="task.cover"/ ></div>
                     <div class="flex-item flex-wrap flex-row flex-space-between">
                         <div class="flex-item task-title">{{task.project_title}}</div>
                         <div class="flex-item task-type">{{task.type}}</div>
@@ -81,7 +72,7 @@
         </div>
         <div id="task-info" class="clear" v-if="showtaskinfo">
             <div class="task flex-item flex-wrap flex-col">
-                <div class="flex-item task-cover"><img v-bind:src="tasks[viewtaskkey].cover"></img></div>
+                <div class="flex-item task-cover"><img v-bind:src="tasks[viewtaskkey].cover" /></div>
                 <div class="flex-item flex-wrap flex-row flex-space-between">
                     <div class="flex-item task-title">{{tasks[viewtaskkey].project_title}}</div>
                     <div class="flex-item task-type">{{tasks[viewtaskkey].type}}</div>
@@ -97,7 +88,29 @@
                 </div>
                 <button class="flex-item weui_btn weui_btn_inline weui_btn_primary" v-on:click="accept" v-if="tasks[viewtaskkey].acceptable">接受任务</button>
             </div>
+            <button id="goback" class="flex-item weui_btn weui_btn_primary" v-on:click="goback">返回</button>
         </div>
+    </div>
+    <div id="relocation" class="hidden">
+        <div class="wx_row_item">
+            <div data-toggle="!distpicker">
+                <div class="wx_row_item" style="flex-wrap: wrap;">
+                    <div data-toggle="distpicker" id='distpicker' >
+                        <select id='province' class="selectpicker" data-province=""></select>
+                        <select id='city' class="selectpicker" data-city=""></select>
+                        <select id='district' class="selectpicker" data-district=""></select>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wx_row_item">
+            <button id="viewtask" class="weui_btn weui_btn_primary">查看任务</button>
+        </div>
+    </div>
+
+    <div>
+        <pre id="log">
+        </pre>
     </div>
 </div>
 
