update baidu ak, remove alerts.
Change-Id: Idfefc857754dbd5c357d376c8df894948a958a63

--- a/tpl/wechat/index/home.htm
+++ b/tpl/wechat/index/home.htm
@@ -35,7 +35,7 @@ if (typeof(wx) != 'undefined') {
             <p>{:$user["nickname"]}</p>
         </div>
         <div class="wx_row_item">
-            <div>当前位置：<span id="current-location">xxxxx</span></div>
+            <div>当前位置：<span id="current-location"></span></div>
         </div>
     </div>
     <div id="taskinfos">
