--- a/tpl/admin/header.htm
+++ b/tpl/admin/header.htm
@@ -22,6 +22,7 @@
         <script src="[:vendor]/sb-admin/sb-admin-2.min.js"></script>
         <script src="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <script src="[:vendor]/distpicker/distpicker.js"></script>
+        <script src="[:vendor]/vue/vue.js"></script>
         
         <script src="[:app]/js/main.js"></script>
         <script src="[:app]/js/picservice.js"></script>
