1 Added new_task_buuton in task/index.htm. 2 New/Modify task will be checked before submission.

--- a/tpl/admin/task/index.htm
+++ b/tpl/admin/task/index.htm
@@ -1,7 +1,7 @@
 <div id="page-wrapper">
     <div class="clear">
     <h3>任务列表 -- 项目名称：{:$project_title}
-    <!--<a href='?admin/task/new&muffinid={:$muffinid}'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a>-->
+    <a href='?admin/task/new&muffinid={:$muffinid}'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a>
     </h3>
     <hr>
     <?php
